# xfce4-generic-slider

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  configure.ac  configure.ac.in  generic-slider.c  generic-slider.desktop  meson.build  module.xml
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  generic-slider.c  generic-slider.desktop.in  meson.build
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  id.po  ie.po  it.po  ja.po  kk.po  ko.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  th.po  tr.po  ug.po  uk.po  (+3 more)
